components/nonmem/src/output_files/snapshots/nonmem__output_files__cor__tests__can_parse_cor_files@1000b.cor.snap
---
source: components/nonmem/src/output_files/cor.rs
expression: "result[0]"
input_file: components/nonmem/test_data/cor/1000b.cor
---
CorrelationMatrix {
    method: Some(
        Imp,
    ),
    parameters: [
        "THETA1",
        "THETA2",
        "THETA3",
        "THETA4",
        "SIGMA(1,1)",
        "SIGMA(2,1)",
        "SIGMA(2,2)",
        "OMEGA(1,1)",
        "OMEGA(2,1)",
        "OMEGA(2,2)",
        "OMEGA(3,1)",
        "OMEGA(3,2)",
        "OMEGA(3,3)",
        "OMEGA(4,1)",
        "OMEGA(4,2)",
        "OMEGA(4,3)",
        "OMEGA(4,4)",
    ],
    correlations: [
        CorrelationEntry {
            param1: "THETA1",
            param2: "THETA2",
            value: -0.0783533,
        },
        CorrelationEntry {
            param1: "THETA1",
            param2: "THETA3",
            value: 0.276858,
        },
        CorrelationEntry {
            param1: "THETA1",
            param2: "SIGMA(1,1)",
            value: 0.00599611,
        },
        CorrelationEntry {
            param1: "THETA1",
            param2: "OMEGA(2,2)",
            value: 0.0825571,
        },
        CorrelationEntry {
            param1: "THETA1",
            param2: "OMEGA(3,3)",
            value: 0.000992878,
        },
        CorrelationEntry {
            param1: "THETA2",
            param2: "THETA1",
            value: -0.0783533,
        },
        CorrelationEntry {
            param1: "THETA2",
            param2: "THETA3",
            value: -0.0348742,
        },
        CorrelationEntry {
            param1: "THETA2",
            param2: "SIGMA(1,1)",
            value: 0.00733394,
        },
        CorrelationEntry {
            param1: "THETA2",
            param2: "OMEGA(2,2)",
            value: -0.0234114,
        },
        CorrelationEntry {
            param1: "THETA2",
            param2: "OMEGA(3,3)",
            value: -0.00779601,
        },
        CorrelationEntry {
            param1: "THETA3",
            param2: "THETA1",
            value: 0.276858,
        },
        CorrelationEntry {
            param1: "THETA3",
            param2: "THETA2",
            value: -0.0348742,
        },
        CorrelationEntry {
            param1: "THETA3",
            param2: "SIGMA(1,1)",
            value: 0.0173682,
        },
        CorrelationEntry {
            param1: "THETA3",
            param2: "OMEGA(2,2)",
            value: 0.0353559,
        },
        CorrelationEntry {
            param1: "THETA3",
            param2: "OMEGA(3,3)",
            value: 0.00124298,
        },
        CorrelationEntry {
            param1: "SIGMA(1,1)",
            param2: "THETA1",
            value: 0.00599611,
        },
        CorrelationEntry {
            param1: "SIGMA(1,1)",
            param2: "THETA2",
            value: 0.00733394,
        },
        CorrelationEntry {
            param1: "SIGMA(1,1)",
            param2: "THETA3",
            value: 0.0173682,
        },
        CorrelationEntry {
            param1: "SIGMA(1,1)",
            param2: "OMEGA(2,2)",
            value: 0.00277693,
        },
        CorrelationEntry {
            param1: "SIGMA(1,1)",
            param2: "OMEGA(3,3)",
            value: -0.00767552,
        },
        CorrelationEntry {
            param1: "OMEGA(2,2)",
            param2: "THETA1",
            value: 0.0825571,
        },
        CorrelationEntry {
            param1: "OMEGA(2,2)",
            param2: "THETA2",
            value: -0.0234114,
        },
        CorrelationEntry {
            param1: "OMEGA(2,2)",
            param2: "THETA3",
            value: 0.0353559,
        },
        CorrelationEntry {
            param1: "OMEGA(2,2)",
            param2: "SIGMA(1,1)",
            value: 0.00277693,
        },
        CorrelationEntry {
            param1: "OMEGA(2,2)",
            param2: "OMEGA(3,3)",
            value: 0.00586414,
        },
        CorrelationEntry {
            param1: "OMEGA(3,3)",
            param2: "THETA1",
            value: 0.000992878,
        },
        CorrelationEntry {
            param1: "OMEGA(3,3)",
            param2: "THETA2",
            value: -0.00779601,
        },
        CorrelationEntry {
            param1: "OMEGA(3,3)",
            param2: "THETA3",
            value: 0.00124298,
        },
        CorrelationEntry {
            param1: "OMEGA(3,3)",
            param2: "SIGMA(1,1)",
            value: -0.00767552,
        },
        CorrelationEntry {
            param1: "OMEGA(3,3)",
            param2: "OMEGA(2,2)",
            value: 0.00586414,
        },
    ],
}
