components/nonmem/src/output_files/snapshots/nonmem__output_files__cor__tests__can_parse_cor_files@3116vc.cor.snap
---
source: components/nonmem/src/output_files/cor.rs
expression: "result[0]"
input_file: components/nonmem/test_data/cor/3116vc.cor
---
CorrelationMatrix {
    method: Some(
        Foce,
    ),
    parameters: [
        "THETA1",
        "THETA2",
        "THETA3",
        "THETA4",
        "SIGMA(1,1)",
        "SIGMA(2,1)",
        "SIGMA(2,2)",
        "OMEGA(1,1)",
        "OMEGA(2,1)",
        "OMEGA(2,2)",
        "OMEGA(3,1)",
        "OMEGA(3,2)",
        "OMEGA(3,3)",
        "OMEGA(4,1)",
        "OMEGA(4,2)",
        "OMEGA(4,3)",
        "OMEGA(4,4)",
    ],
    correlations: [
        CorrelationEntry {
            param1: "THETA1",
            param2: "THETA2",
            value: -0.073968,
        },
        CorrelationEntry {
            param1: "THETA1",
            param2: "THETA3",
            value: 0.22282,
        },
        CorrelationEntry {
            param1: "THETA1",
            param2: "SIGMA(1,1)",
            value: 0.00453679,
        },
        CorrelationEntry {
            param1: "THETA1",
            param2: "OMEGA(2,2)",
            value: 0.000968776,
        },
        CorrelationEntry {
            param1: "THETA1",
            param2: "OMEGA(3,2)",
            value: -0.00143474,
        },
        CorrelationEntry {
            param1: "THETA1",
            param2: "OMEGA(3,3)",
            value: -0.00179257,
        },
        CorrelationEntry {
            param1: "THETA2",
            param2: "THETA1",
            value: -0.073968,
        },
        CorrelationEntry {
            param1: "THETA2",
            param2: "THETA3",
            value: 0.854441,
        },
        CorrelationEntry {
            param1: "THETA2",
            param2: "SIGMA(1,1)",
            value: 0.0155872,
        },
        CorrelationEntry {
            param1: "THETA2",
            param2: "OMEGA(2,2)",
            value: -0.000129197,
        },
        CorrelationEntry {
            param1: "THETA2",
            param2: "OMEGA(3,2)",
            value: 0.00103823,
        },
        CorrelationEntry {
            param1: "THETA2",
            param2: "OMEGA(3,3)",
            value: -0.00123015,
        },
        CorrelationEntry {
            param1: "THETA3",
            param2: "THETA1",
            value: 0.22282,
        },
        CorrelationEntry {
            param1: "THETA3",
            param2: "THETA2",
            value: 0.854441,
        },
        CorrelationEntry {
            param1: "THETA3",
            param2: "SIGMA(1,1)",
            value: 0.0137709,
        },
        CorrelationEntry {
            param1: "THETA3",
            param2: "OMEGA(2,2)",
            value: 0.000119556,
        },
        CorrelationEntry {
            param1: "THETA3",
            param2: "OMEGA(3,2)",
            value: -0.000951283,
        },
        CorrelationEntry {
            param1: "THETA3",
            param2: "OMEGA(3,3)",
            value: 0.000204171,
        },
        CorrelationEntry {
            param1: "SIGMA(1,1)",
            param2: "THETA1",
            value: 0.00453679,
        },
        CorrelationEntry {
            param1: "SIGMA(1,1)",
            param2: "THETA2",
            value: 0.0155872,
        },
        CorrelationEntry {
            param1: "SIGMA(1,1)",
            param2: "THETA3",
            value: 0.0137709,
        },
        CorrelationEntry {
            param1: "SIGMA(1,1)",
            param2: "OMEGA(2,2)",
            value: -0.00187008,
        },
        CorrelationEntry {
            param1: "SIGMA(1,1)",
            param2: "OMEGA(3,2)",
            value: 0.00660175,
        },
        CorrelationEntry {
            param1: "SIGMA(1,1)",
            param2: "OMEGA(3,3)",
            value: -0.00384892,
        },
        CorrelationEntry {
            param1: "OMEGA(2,2)",
            param2: "THETA1",
            value: 0.000968776,
        },
        CorrelationEntry {
            param1: "OMEGA(2,2)",
            param2: "THETA2",
            value: -0.000129197,
        },
        CorrelationEntry {
            param1: "OMEGA(2,2)",
            param2: "THETA3",
            value: 0.000119556,
        },
        CorrelationEntry {
            param1: "OMEGA(2,2)",
            param2: "SIGMA(1,1)",
            value: -0.00187008,
        },
        CorrelationEntry {
            param1: "OMEGA(2,2)",
            param2: "OMEGA(3,2)",
            value: 0.943909,
        },
        CorrelationEntry {
            param1: "OMEGA(2,2)",
            param2: "OMEGA(3,3)",
            value: 0.802542,
        },
        CorrelationEntry {
            param1: "OMEGA(3,2)",
            param2: "THETA1",
            value: -0.00143474,
        },
        CorrelationEntry {
            param1: "OMEGA(3,2)",
            param2: "THETA2",
            value: 0.00103823,
        },
        CorrelationEntry {
            param1: "OMEGA(3,2)",
            param2: "THETA3",
            value: -0.000951283,
        },
        CorrelationEntry {
            param1: "OMEGA(3,2)",
            param2: "SIGMA(1,1)",
            value: 0.00660175,
        },
        CorrelationEntry {
            param1: "OMEGA(3,2)",
            param2: "OMEGA(2,2)",
            value: 0.943909,
        },
        CorrelationEntry {
            param1: "OMEGA(3,2)",
            param2: "OMEGA(3,3)",
            value: 0.943307,
        },
        CorrelationEntry {
            param1: "OMEGA(3,3)",
            param2: "THETA1",
            value: -0.00179257,
        },
        CorrelationEntry {
            param1: "OMEGA(3,3)",
            param2: "THETA2",
            value: -0.00123015,
        },
        CorrelationEntry {
            param1: "OMEGA(3,3)",
            param2: "THETA3",
            value: 0.000204171,
        },
        CorrelationEntry {
            param1: "OMEGA(3,3)",
            param2: "SIGMA(1,1)",
            value: -0.00384892,
        },
        CorrelationEntry {
            param1: "OMEGA(3,3)",
            param2: "OMEGA(2,2)",
            value: 0.802542,
        },
        CorrelationEntry {
            param1: "OMEGA(3,3)",
            param2: "OMEGA(3,2)",
            value: 0.943307,
        },
    ],
}
